recursion.logo.lessons.recursion.logo.spiral.SpiralUse.scala.error
SpiralUse:3: error: type mismatch;
 found   : Double(0.1)
 required: Int
    spiral(100,36,0.1,6);
                  ^