recursion.logo.lessons.recursion.logo.spiral.SpiralUse.scala.code
override def run() {
    spiral(100,36,0.1,6);
}